# rust-huffman-egui

./: Cargo.toml  LICENSE  todo.org
examples/: human-rights-es.txt  human-rights-es.txt.huff  romeo-and-juliet.txt.huff  simple.txt  simple.txt.huff
src/: huffman.rs  main.rs
