[package]
name = "rust-huffman-egui"
version = "0.1.0"
edition = "2021"

[features]
box_patterns = []

[dependencies]
eframe = "0.27.2"
egui = "0.27.2"
serde = { version = "1.0.203", features = ["std", "derive"] }
postcard = { version = "1.0.8", features = ["heapless", "heapless-cas", "alloc"] }
tinyfiledialogs = "3.9.1"
